# trngapi

./: .env  Dockerfile  ReadMe.md  docker-compose.yaml  install_driver.sh
.github/workflows/: tests.yaml
trng-api/: main.py  pyproject.toml  test_main.py  trng.py
trng-api/api/: Dockerfile  pyproject.toml  test_main.py
trng-api/trng/: Dockerfile  main.py  pyproject.toml
trng-api/trng/migrations_job/: delete_job.sql  delete_procedure.sql
